--- a/planning/behavior_msg_converter/package.xml
+++ b/planning/behavior_msg_converter/package.xml
@@ -6,20 +6,42 @@
   <description>The behavior_msg_converter ROS 2 package</description>
   <maintainer email="muhua.guan@tier4.jp">muhuaguan</maintainer>
   <license>Apache License 2.0</license>
+  <author email="muhua.guan@tier4.jp">muhuaguan</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>autoware_cmake</buildtool_depend>
+  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
 
+  <depend>autoware_auto_mapping_msgs</depend>
+  <depend>autoware_auto_perception_msgs</depend>
+  <depend>autoware_auto_planning_msgs</depend>
+  <depend>behavior_velocity_planner_common</depend>
+  <depend>diagnostic_msgs</depend>
+  <depend>eigen</depend>
+  <depend>geometry_msgs</depend>
+  <depend>lanelet2_extension</depend>
+  <depend>libboost-dev</depend>
+  <depend>motion_utils</depend>
+  <depend>motion_velocity_smoother</depend>
+  <depend>pcl_conversions</depend>
+  <depend>pluginlib</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
-  <depend>tier4_debug_msgs</depend>
+  <depend>route_handler</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_eigen</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tier4_api_msgs</depend>
+  <depend>tier4_autoware_utils</depend>
   <depend>tier4_planning_msgs</depend>
+  <depend>tier4_v2x_msgs</depend>
+  <depend>visualization_msgs</depend>
 
-  <exec_depend>ros2cli</exec_depend>
-  <exec_depend>topic_tools</exec_depend>
-
+  <test_depend>ament_cmake_ros</test_depend>
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>autoware_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
