--- a/planning/behavior_msg_converter/CMakeLists.txt
+++ b/planning/behavior_msg_converter/CMakeLists.txt
@@ -9,11 +9,6 @@ ament_auto_add_library(behavior_msg_converter_node SHARED
 )
 
 rclcpp_components_register_node(behavior_msg_converter_node
-  PLUGIN "BehaviorMsgConverterNode"
+  PLUGIN "behavior_msg_converter::BehaviorMsgConverterNode"
   EXECUTABLE behavior_msg_converter
-)
-
-ament_auto_package(INSTALL_TO_SHARE
-  launch
-  config
 )
