fix: fix build error
Signed-off-by: Tier4Guan <muhua.guan@tier4.jp>

--- a/planning/behavior_msg_converter/CMakeLists.txt
+++ b/planning/behavior_msg_converter/CMakeLists.txt
@@ -12,3 +12,5 @@ rclcpp_components_register_node(behavior_msg_converter_node
   PLUGIN "behavior_msg_converter::BehaviorMsgConverterNode"
   EXECUTABLE behavior_msg_converter
 )
+
+ament_auto_package(INSTALL_TO_SHARE)
